waiting orders command, refactor shop sync
